<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Projekt Zespołowy</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main_generator">Generator</string>
    <string name="title_activity_display">Display</string>
    <string name="wybierz_tryb">Wybierz tryb:</string>
    <string name="generator">Generator</string>
    <string name="skaner">Skaner</string>
    <string name="title_activity_main_skaner">Skaner</string>
    <string name="seed_do_wyslania">Seed do wysłania</string>
    <string name="zdjecie_z_bazy">Zdjęcie z bazy</string>
    <string name="skanowane_zdjecie">Zeskanowane zdjęcie</string>
    <string name="porownaj">Porównaj</string>
    <string name="seed">Seed</string>

</resources>
