<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.projekt.zespolowy.MainActivity" >

    <Button
        android:id="@+id/main_generator_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/generator" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/main_generator_btn"
        android:layout_centerHorizontal="true"
        android:text="@string/wybierz_tryb"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/main_skaner_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/main_generator_btn"
        android:layout_centerHorizontal="true"
        android:text="@string/skaner" />

</RelativeLayout>
